--- a/pkg/manifest/testdata/full.yml
+++ b/pkg/manifest/testdata/full.yml
@@ -101,6 +101,11 @@ services:
       - 5000/udp
       - 5001
       - 5002/tcp
+  tcpservice:
+    health:
+      method: tcp
+    ports:
+      - 2000/tcp
 timers:
   alpha:
     command: bin/alpha
