--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,43 +62,43 @@ jobs:
         asset_path: ./cmd/convox/pkg/convox-darwin-10.6-amd64
         asset_name: convox-macos
         asset_content_type: application/octet-stream
-  ci:
-    needs: release
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        provider:
-        - aws
-        - azure
-        - do
-        - gcp
-    steps:
-    - name: checkout
-      uses: actions/checkout@v1
-    - name: version
-      run: echo "::set-env name=VERSION::$(echo ${{ github.ref }} | awk -F/ '{print $3}')"
-    - name: name
-      run: echo "::set-env name=RACK_NAME::ci-$(date +"%Y%m%d%H%M%S")"
-    - name: provider
-      run: echo "::set-env name=PROVIDER::${{ matrix.provider }}"
-    - name: secrets
-      run: ci/secrets.sh
-      env:
-        SECRETS: ${{ toJson(secrets) }}
-    - name: dependencies
-      run: ci/dependencies.sh
-    - name: cli
-      run: ci/cli.sh
-    - name: install
-      run: ci/install.sh
-    - name: wait
-      run: sleep 600
-    - name: test
-      run: ci/test.sh
-    - name: debug
-      run: ci/debug.sh
-      if: always()
-    - name: uninstall
-      run: ci/uninstall.sh
-      if: always()
+  # ci:
+  #   needs: release
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       provider:
+  #       - aws
+  #       - azure
+  #       - do
+  #       - gcp
+  #   steps:
+  #   - name: checkout
+  #     uses: actions/checkout@v1
+  #   - name: version
+  #     run: echo "::set-env name=VERSION::$(echo ${{ github.ref }} | awk -F/ '{print $3}')"
+  #   - name: name
+  #     run: echo "::set-env name=RACK_NAME::ci-$(date +"%Y%m%d%H%M%S")"
+  #   - name: provider
+  #     run: echo "::set-env name=PROVIDER::${{ matrix.provider }}"
+  #   - name: secrets
+  #     run: ci/secrets.sh
+  #     env:
+  #       SECRETS: ${{ toJson(secrets) }}
+  #   - name: dependencies
+  #     run: ci/dependencies.sh
+  #   - name: cli
+  #     run: ci/cli.sh
+  #   - name: install
+  #     run: ci/install.sh
+  #   - name: wait
+  #     run: sleep 600
+  #   - name: test
+  #     run: ci/test.sh
+  #   - name: debug
+  #     run: ci/debug.sh
+  #     if: always()
+  #   - name: uninstall
+  #     run: ci/uninstall.sh
+  #     if: always()
